Fixed Login Box being cut off

--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,8 @@ button:hover,button:hover a, input:hover{
 #loginBox{
   display: grid;
   
-  width:600px;
-  height:400px;
+  width:100%;
+  height:100%;
   max-height:fit-content;
   
   background-color: #29394b;
